@@ -1,4 +1,15 @@
+/* This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2, or (at your option)
+   any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.  */
+
 #include "cvs.h"
+#include "getline.h"
 
 /*
   Original Author:  athan@morgan.com <Andrew C. Athan> 2/1/94
@@ -154,17 +165,26 @@ wrap_add_file (file, temp)
     int temp;
 {
     FILE *fp;
-    char line[1024];
+    char *line = NULL;
+    size_t line_allocated = 0;
 
-    wrap_restore_saved();
-    wrap_kill_temp();
+    wrap_restore_saved ();
+    wrap_kill_temp ();
 
-	/* load the file */
-    if (!(fp = CVS_FOPEN (file, "r")))
+    /* Load the file.  */
+    fp = CVS_FOPEN (file, "r");
+    if (fp == NULL)
+    {
+	if (!existence_error (errno))
+	    error (0, errno, "cannot open %s", file);
 	return;
-    while (fgets (line, sizeof (line), fp))
+    }
+    while (getline (&line, &line_allocated, fp) >= 0)
 	wrap_add (line, temp);
-    (void) fclose (fp);
+    if (ferror (fp))
+	error (0, errno, "cannot read %s", file);
+    if (fclose (fp) == EOF)
+	error (0, errno, "cannot close %s", file);
 }
 
 void
